# ObjectModelFramework

./: .gitignore  AWS-graph.py  AWS-graph.ui  AWS-test.py  AWSclasses.py  AWSclasses.ui  AWSscript.py  AWSscript.xml  Demo.py  Drawing.py  GraphDemo.py  Lambda.py  NY-task.cfg  NY-task.py  NY-task.ui  ObjectModel.py  ReadMe.md  awsClasses.py  awsDraw.py  awsPrefixForm.py  awsScript.py  awsScript.ui  awsScriptProfile.py  create.py  diff.bat  ec2_list.py  full resp.py  graph.py  igw_list.py  key_pair.py  nacl_list.py  natgw_list.py  omf_aws.py  omf_aws.ui  pyproject.toml  rt_list.py  s3_list.py  secgr_list.py  subnets_list.py  svg.py  (+3 more)
.github/workflows/: publish.yml
Demo/: Demo.j2  Demo.py
Drawing/: GraphDemo.py
Examples/: AIM.py  DynamoDB.py  Lambda.py  LoadBalancer.py  NYtask.py  RDS.py  Test.py
OMF/: ObjectModel.py
Prefix/: awsPrefixForm.cfg  awsPrefixForm.py
Y3A/: ReadMe.md  Y3A.py  Y3A.ui  Y3A_Profile.py  awsClasses.py
Y3A/Drawing/: Drawing.py  svgForm.py
Y3A/Examples/: Test.py
Y3A/Examples/API/: API.bat  API.py  API.yaml  index.html  lambda.py
Y3A/Examples/CloudFormation/: APIGW_Lambda.yaml  APIGateWay.yaml  CloudFormation.py  Lambda.yaml
Y3A/Examples/IAM/: IAM.py
Y3A/Examples/Lambda/: Lambda.py  clean.py  modified.py
Y3A/Examples/LoadBalancer/: LoadBalancer.py
Y3A/Examples/Query/: Query.py
Y3A/OMF/: ObjectModel.py  Object_Model_Framework.md
docs/: CONTRIBUTING.md  Graph_Drawing_Utility.md  Object_Model_Framework.md  Yet_Another_AWS_Analyser.md
src/: Demo.py
src/ObjectModelFramework/: ObjectModelFramework.py  __init__.py  _version.py
(+2 files in other folders)
